Added a css style

--- a/.snapshots/snapshot-2025-02-07T05_00_57_964Z.md
+++ b/.snapshots/snapshot-2025-02-07T05_00_57_964Z.md
@@ -1,14 +1,25 @@
+Enter your prompt here
+
+# Project Structure
+
+└─ README.md
+└─ play.html
+
+
+# Project Files
+
+- c:\Users\S575720\Desktop\webapps-repo\44563-webapps-s25-assignment4-Saisrnivas-s575720\play.html
+
+## c:\Users\S575720\Desktop\webapps-repo\44563-webapps-s25-assignment4-Saisrnivas-s575720\play.html
+```
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saisrinivas Presents</title>
 </head>
 <body>
-    <link rel="stylesheet" href="shakespeare.css">
     <h1>Saisrinivas Presents</h1>
     
     <h2>Romeo and Juliet</h2>
@@ -47,7 +58,9 @@
     My name, dear saint, is hateful to myself,<br>
     Because it is an enemy to thee;<br>
     Had I it written, I would tear the word.</p>
-    <link rel="stylesheet" href="shakespeare.css">
 
 </body>
 </html>
+
+```
+
